--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,23 +44,27 @@
     </LinearLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
         android:background="@android:color/white">
 
         <ImageView
             android:id="@+id/src_img"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
             android:layout_height="wrap_content"
+            android:maxWidth="300dp"
             android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:layout_gravity="center"
             android:contentDescription="@null"/>
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
+            android:layout_width="300dp"
+            android:maxWidth="300dp"
             android:scaleType="fitCenter"
+            android:adjustViewBounds="true"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:contentDescription="@null"/>
